// Copyright (c) HashiCorp, Inc.
// SPDX-License-Identifier: MPL-2.0

syntax = "proto3";

package google.cloudrun;

option go_package = "waypoint/builtin/google/cloudrun";

import "any.proto";

message Deployment {
  string url = 1;
  Resource resource = 2;
  string revision_id = 3;
  string region = 4;
  string id = 5;
  opaqueany.Any resource_state = 6;

  message Resource {
    string location = 1;
    string project = 2;
    string name = 3;
  }
}

message Release {
  string url = 1;
}

message Resource {
  message Service {
    string api_name = 1;
    string revision_name = 2;
  }
}
